syntax = "proto3";

option java_multiple_files = false;
option java_outer_classname = "FridgeProto";

package fridge;

service FridgeService {

  rpc GetFridgeStatus(FridgeStatusRequest) returns (FridgeStatusResponse) {}

  rpc ControlFridge(FridgeControlRequest) returns (FridgeControlResponse) {}

  // Client Streaming RPC for reporting fridge status every 15 minutes
  rpc ReportFridgeStatus(stream FridgeStatusResponse) returns (FridgeControlRequest) {}

  rpc HealthCheck(HealthCheckRequest) returns (stream HealthCheckResponse) {}
}

message FridgeStatusRequest {}

message FridgeStatusResponse {
  bool isFridgeOn = 1;
  float temperature = 2;
}

message FridgeControlRequest {
  bool turnOn = 1;
}

message FridgeControlResponse {}

message HealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message HealthCheckResponse {
  int32 status = 1;
  string message = 2;
}