syntax = "proto3";

option java_multiple_files = false;
option java_outer_classname = "OvenProto";

package oven;


service OvenService {

  rpc GetOvenStatus(OvenStatusRequest) returns (OvenStatusResponse) {}

  rpc ControlOven(OvenControlRequest) returns (OvenControlResponse) {}

  rpc MonitorOvenStatus(OvenMonitorRequest) returns (stream OvenStatusResponse) {}

  rpc OptimizeEnergy(stream OvenStatusResponse) returns (stream OvenControlRequest) {}

  rpc HealthCheck(HealthCheckRequest) returns (stream HealthCheckResponse) {}
}

message OvenStatusRequest {
}

message OvenStatusResponse {
  bool isOvenOn = 1;
  float temperature = 2;
  string bakingTask = 3;
  int32 remainingTime = 4;
}

message OvenControlRequest {
  bool turnOn = 1;
}

message OvenControlResponse {
}

message OvenMonitorRequest {
}

message HealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message HealthCheckResponse {
  int32 status = 1;
  string message = 2;
}